hello-chris-ai-homelab/.k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/part-of: home-assistant
spec:
  to:
    kind: Service
    name: home-assistant
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
